--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi"> <!-- Thay 'en' bằng 'vi' vì nội dung bằng tiếng Việt -->
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="theme-color" content="#ffe6f0" /> <!-- Màu hồng phấn, khớp với giao diện -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Thiếp mời yêu thương dành cho Pé Pôngiuoi - Một lời mời đặc biệt với những khoảnh khắc ý nghĩa và lãng mạn vào ngày 4/3/2025."
     />
+    <meta name="keywords" content="thiếp mời, thư mời, yêu thương, hẹn hò, Pé Pôngiuoi, ngày 4/3/2025, lãng mạn" />
+    <meta name="author" content="Nguyễn Minh" />
+    <meta name="robots" content="index, follow" /> <!-- Cho phép công cụ tìm kiếm index trang -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Thư Mời Yêu Thương</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap" /> <!-- Font Quicksand, khớp với CSS -->
+    <!-- Thêm favicon với nhiều kích cỡ -->
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon-96x96.png" />
+    <!-- Thêm Open Graph meta cho chia sẻ trên mạng xã hội -->
+    <meta property="og:title" content="Thư Mời Yêu Thương" />
+    <meta property="og:description" content="Một thiếp mời đặc biệt dành cho Pé Pôngiuoi với những khoảnh khắc lãng mạn và ý nghĩa." />
+    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:url" content="https://nguyenminh993.github.io/a-date-invitation/" />
+    <meta property="og:type" content="website" />
+    <!-- Thêm Twitter Card meta -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Thư Mời Yêu Thương" />
+    <meta name="twitter:description" content="Một thiếp mời đặc biệt dành cho Pé Pôngiuoi với những khoảnh khắc lãng mạn và ý nghĩa." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo192.png" />
+    <title>Thư Mời Yêu Thương - Thiếp Mời Dành Cho Em</title> <!-- Mở rộng tiêu đề để tối ưu SEO -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <!-- Thêm script cho PWA (nếu muốn) -->
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/service-worker.js').then((registration) => {
+            console.log('Service Worker registered with scope:', registration.scope);
+          }).catch((error) => {
+            console.error('Service Worker registration failed:', error);
+          });
+        });
+      }
+    </script>
   </body>
 </html>
